customer create test
