# src/api/structures/user/index.ts
@@ -1,0 +1,3 @@
+export * from "./user";
+export * from "./customer";
+export * from "./accessor";
